unpackaged/main/default/objects/litify_docs__Folder_Structure_Assignment__c/litify_docs__Folder_Structure_Assignment__c.object-meta.xml
<CustomObject>
    <description>When the Docrio File Viewer is loaded on a record for the first time, or when a file is uploaded to a record for the first time through the API, the applicable folder structure will be determined at that time and the result will be stored as a record in this object.</description>
    <label>Folder Structure Assignment</label>
    <nameField>
        <displayFormat>FSA-{0000}</displayFormat>
        <label>Folder Structure Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Folder Structure Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>