unpackaged/main/default/objects/litify_docs__Folder_Structure_Assignment__c/fields/litify_docs__Folder_Structure__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Folder_Structure__c</fullName>
    <description>The folder structure itself, stored in JSON format. The initial value is copied from the Folder_Structure_Template__c record. The value of this field can be modified over time as the folder structure is modified on a particular record.</description>
    <label>Folder Structure</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>