unpackaged/main/default/objects/litify_docs__Folder_Structure_Assignment__c/fields/litify_docs__Folder_Structure_Template__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Folder_Structure_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Folder_Structure_Template__c record that the assignment was derived from.</description>
    <label>Folder Structure Template</label>
    <referenceTo>litify_docs__Folder_Structure_Template__c</referenceTo>
    <relationshipLabel>Folder Structure Assignments</relationshipLabel>
    <relationshipName>Folder_Structure_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>