unpackaged/main/default/objects/litify_docs__Folder_Structure_Assignment__c/fields/litify_docs__Portal_Folder_Paths__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Portal_Folder_Paths__c</fullName>
    <description>The folders that are shared with the portal. Stored as a 2D Array of Strings.</description>
    <label>Portal Folder Paths</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>