unpackaged/main/default/objects/litify_docs__Folder_Structure_Assignment__c/fields/litify_docs__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Record_Id__c</fullName>
    <description>The Id of the record the folder structure is assigned to.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>